# LangChain-LangGraph

./: .gitignore  Learning_Resources.md  README.md
LangChain/: Notes.md
Lang_Chain/: .env  Notes.md  pyproject.toml
Lang_Chain/1_Chapter/: 1_LLM_Call.ipynb  2_Messages.ipynb  3_Structured_Outputs.py
Lang_Chain/2_Chapter/: 1_First_Chain.py  2_Chain_with_CustomRunnable.py  2_CustomRunnable.md  3_ParallelChains.md  3_Parallel_Chains.py
Lang_Chain/2_Chapter_Chains/: 2_Chain_with_CustomRunnable.py  3_ParallelChains.md  3_Parallel_Chains.py  4_Conditional_Chains.py
Lang_Chain/Chapter-1/: 1_Basics.ipynb
