[project]
name = "LangChain_LangGraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.23",
    "langchain-google-vertexai>=0.0.7",
    "pip>=26.0.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]
